# lorahub

./: .gitignore  README.md  compute_lmc.py  compute_perf.py  lorahub_methods.py  pyproject.toml  pytest.ini  reproduce_bbh.py
acc_every_module/boolean_expressions/: acc_every_modules.json
acc_every_module/causal_judgement/: acc_every_modules.json
acc_every_module/date_understanding/: acc_every_modules.json
acc_every_module/disambiguation_qa/: acc_every_modules.json
acc_every_module/dyck_languages/: acc_every_modules.json
acc_every_module/formal_fallacies/: acc_every_modules.json
acc_every_module/geometric_shapes/: acc_every_modules.json
acc_every_module/hyperbaton/: acc_every_modules.json
acc_every_module/logical_deduction_five_objects/: acc_every_modules.json
acc_every_module/logical_deduction_seven_objects/: acc_every_modules.json
acc_every_module/logical_deduction_three_objects/: acc_every_modules.json
acc_every_module/movie_recommendation/: acc_every_modules.json
acc_every_module/multistep_arithmetic_two/: acc_every_modules.json
lorahub/: algorithm.py
tests/: conftest.py  test_compute_lmc.py  test_get_best_loras_lmc.py  test_get_perf_every_module.py  test_get_perf_per_module.py  test_lorahub_greedysoups.py  test_lorahub_with_best_lmc.py  test_lorahub_with_just_best.py  test_mean_lora_weights_with_best_lmc.py  test_mean_lora_weights_with_just_best.py  test_model_soups_with_just_best.py  test_visualize_height_matrix.py  test_visualize_height_matrix_best.py  test_visualize_lmc.py  test_visualize_lmc_best.py  test_visualize_perf_per_module.py
(+310 files in other folders)
