[tool.poetry]
name = "lorahub"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.38.2"
peft = "^0.9.0"
nevergrad = "^1.0.2"
tqdm = "^4.66.2"
pandas = "^2.2.1"
numpy = "^1.26.4"
datasets = "^2.18.0"
torch = {version = "2.2.1+cu121", source = "torch"}
torchvision = "^0.17.1"
jsonlines = "^4.0.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.2.0"
pytest = "^8.1.1"
isort = "^5.13.2"
mypy = "^1.9.0"
ipython = "^8.22.2"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310"]
exclude = """.venv|venv|.env"""

[tool.isort]
skip = [".gitignore"]

[tool.flake8]
exclude = ".venv"
max-line-length = 120

[tool.mypy]
exclude = ["tests"]
